--- a/public/index.html
+++ b/public/index.html
@@ -57,7 +57,7 @@
                 <div class="projects">Projects</div>
             </div>
         </div>
-        <div class="container">
+        <div>
             <div class="flex">
                 <div class="card custom-card">
                     <img class="custom-image" src="/images/survaid.png">
