--- a/public/index.html
+++ b/public/index.html
@@ -77,6 +77,30 @@
     <div>
       <div class="flex">
         <div class="card custom-card">
+          <img class="custom-image" src="/images/MoonshotAI.png" />
+          <span class="card-title custom-title-content">MoonshotAI</span>
+          <div class="card-content">
+            <p class="description">
+              MoonshotAI is an AI-powered startup idea evaluation tool that
+              analyzes startup ideas to empower data-driven decision-making.
+            </p>
+          </div>
+          <div class="card-action custom-card-action">
+            <a
+              href="https://moonshot-ai.surge.sh/"
+              class="card-link"
+              target="_blank"
+              >Demo</a
+            >
+            <a
+              href="https://github.com/jimbucktoo/moonshot-ai"
+              class="card-link"
+              target="_blank"
+              >Source Code</a
+            >
+          </div>
+        </div>
+        <div class="card custom-card">
           <img class="custom-image" src="/images/survaid.png" />
           <span class="card-title custom-title-content">Survaid</span>
           <div class="card-content">
