--- a/public/index.html
+++ b/public/index.html
@@ -71,7 +71,7 @@
     </div>
     <div class="section parallax-spacing">
       <div class="row container">
-        <div class="projects">Programming Projects</div>
+        <div class="projects">Projects</div>
       </div>
     </div>
     <div>
