--- a/public/index.html
+++ b/public/index.html
@@ -105,8 +105,8 @@
           <span class="card-title custom-title-content">Survaid</span>
           <div class="card-content">
             <p class="description">
-              Survaid is a web and mobile platform that facilitates real-time
-              mobile sensor data collection from survey participants.
+              Survaid is a survey platform that facilitates real-time mobile
+              sensor data capturing and analysis from survey participants.
             </p>
           </div>
           <div class="card-action custom-card-action">
@@ -127,7 +127,7 @@
           <div class="card-content">
             <p class="description">
               MovieCrud is a full-stack web application that enables users to
-              create, edit, share and discuss in-depth movie reviews.
+              create, edit, share and discover in-depth movie reviews.
             </p>
           </div>
           <div class="card-action custom-card-action">
